--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,6 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+.grecaptcha-badge{
+  visibility: hidden;
+}
