--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -44,16 +44,13 @@ nav {
   width: 0%;
   background-color: white;
   position: absolute;
+  bottom: -10px;
   transition: all ease-in-out 250ms;
   margin: 0 0 0 10%;
 }
 .nav-links li:hover::before {
   width: 80%;
 }
-
-/* .nav-links li.active::before {
-  width: 80%;
-} */
 
 .login-button {
   background-color: transparent;
