--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,21 +1,29 @@
 .footer {
   text-align: center;
   margin-bottom: -10px;
-  background: linear-gradient(180deg, #EDB17B 0%, #E19856 100%);
+  padding: 30px 0;
+  background: linear-gradient(180deg, #edb17b 0%, #e19856 100%);
 }
 .footer a {
-  color: #012a4c;
+  color: #FFFFFF;
   font-size: 1.7rem;
   display: block;
   text-decoration: none;
 }
+
+.footer a svg {
+  width: 100% !important;
+  height: 100% !important;
+}
+
 .footer img {
   padding: 0px;
-  width: 150px;
-  margin: auto;
+  height: 60px;
+  max-width: 100%;
+  margin: 20px auto;
 }
 .footer .iia {
-  color: #012a4c;
+  color: #FFFFFF;
   font-weight: 500;
   z-index: 5;
   font-size: 1.9rem;
@@ -26,11 +34,6 @@
   text-transform: uppercase;
 }
 @media (max-width: 900px) {
-  .footer img {
-    height: 10vw;
-    width: 10vw;
-    padding: 0px;
-  }
   .footer .iia {
     font-size: 2.4vw;
   }
@@ -40,10 +43,6 @@
 }
 
 @media (max-width: 600px) {
-  .footer img {
-    height: 14vw;
-    width: 14vw;
-  }
   .footer .iia {
     font-size: 3.2vw;
   }
@@ -74,19 +73,15 @@
 }
 
 @media (max-width: 400px) {
-    .footer img {
-        height: 60px !important;
-        width: 60px;
-    }
-    .footer .iia {
-        font-size: 14px !important;
-    }
-    .footer a {
-        font-size: 13px !important;
-    }
-    .bottom a {
-        width: 28px !important;
-        height: 24px !important;
-        font-size: 24px !important;
-    }
+  .footer .iia {
+    font-size: 14px !important;
+  }
+  .footer a {
+    font-size: 13px !important;
+  }
+  .bottom a {
+    width: 28px !important;
+    height: 24px !important;
+    font-size: 24px !important;
+  }
 }
