--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -1,19 +1,20 @@
 nav {
-  height: 6rem;
+  height: 5rem;
   width: 100%;
   background-color: #002a4c;
   box-shadow: 0 3px 20px rgba(0, 0, 0, 0.2);
   display: flex;
+  justify-content: center;
   z-index: 10;
 }
 
 .logo {
-  padding: 1vh 1vw;
+  padding: 8px;
   text-align: center;
 }
 .logo img {
-  height: 5rem;
-  width: 5rem;
+  height: 4rem;
+  max-width: calc(100vw - 60px);
 }
 
 .nav-links {
@@ -99,6 +100,7 @@ nav {
     background: #002a4c;
     height: 100vh;
     width: 100%;
+    margin-top: 0 !important;
     flex-direction: column;
     clip-path: circle(50px at 90% -20%);
     -webkit-clip-path: circle(50px at 90% -10%);
@@ -149,4 +151,10 @@ nav {
 }
 .toggle .line3 {
   transform: rotate(45deg) translate(-5px, -6px);
+}
+
+@media (max-width: 360px) {
+  nav {
+    justify-content: space-between;
+  }
 }
