--- a/src/Pages/Register/Register.css
+++ b/src/Pages/Register/Register.css
@@ -16,6 +16,10 @@
   max-width: 1000px;
   margin: 20px auto;
 }
-.slots-btn{
- padding: 8px 12px;
+.slots-btn {
+  padding: 8px 12px;
+}
+
+.MuiDataGrid-root .MuiDataGrid-menuIcon {
+  visibility: visible !important;
 }
